--- a/app/src/main/res/layout/activity_masjidadminpanel.xml
+++ b/app/src/main/res/layout/activity_masjidadminpanel.xml
@@ -7,6 +7,17 @@
     android:background="@drawable/coloursplashedited"
     tools:context=".masjidadminpanel_activity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical" />
+    </ScrollView>
+
     <View
         android:id="@+id/view9"
         android:layout_width="400dp"
