--- a/app/src/main/res/layout/activity_masjidadminpanel.xml
+++ b/app/src/main/res/layout/activity_masjidadminpanel.xml
@@ -239,7 +239,7 @@
         android:text="enter prayer timings"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
