--- a/app/src/main/res/layout/activity_studentauthactivity.xml
+++ b/app/src/main/res/layout/activity_studentauthactivity.xml
@@ -7,27 +7,18 @@
     android:translationX="-3dp"
     tools:context=".Studentauthactivity">
 
-    <TextView
-        android:id="@+id/tvslinfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Attempts left :"
-        android:textAlignment="center"
-        android:textColor="#D50000"
-        android:textSize="20sp"
-        android:translationY="750dp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="750dp" />
-
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.445" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiemail"
@@ -41,6 +32,7 @@
         android:hint="Enter Email"
         app:boxBackgroundColor="@color/white"
         app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
         app:hintAnimationEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/tipassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +58,7 @@
         android:hint="Enter Password"
         app:boxBackgroundColor="@color/white"
         app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +130,6 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
         android:fontFamily="casual"
         android:shadowColor="@color/black"
         android:shadowDy="5"
@@ -215,9 +207,10 @@
         android:layout_marginEnd="227dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif-black"
-        android:text="Forget Password"
-        android:textColor="@color/black"
+        android:text="Forgot Password"
+        android:textColor="?android:attr/textColorLink"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnstudentlogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -227,8 +220,8 @@
 
     <TextView
         android:id="@+id/tvnewregister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="127dp"
+        android:layout_height="28dp"
         android:layout_marginStart="108dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="65dp"
@@ -237,11 +230,11 @@
         android:fontFamily="sans-serif-black"
         android:minHeight="48dp"
         android:text="New Register"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorLink"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnstudentlogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toEndOf="@+id/tvforgetpassword"
         app:layout_constraintTop_toBottomOf="@+id/tipassword"
         app:layout_constraintVertical_bias="0.0" />
