--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,7 +11,6 @@
         android:layout_width="146dp"
         android:layout_height="58dp"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="176dp"
         android:layout_marginEnd="229dp"
         android:layout_marginBottom="612dp"
         android:fontFamily="casual"
@@ -24,10 +23,10 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.657"
+        app:layout_constraintHorizontal_bias="0.59"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.512" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView16"
@@ -36,7 +35,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="175dp"
         android:layout_marginEnd="86dp"
-        android:layout_marginBottom="613dp"
+        android:layout_marginBottom="106dp"
         android:fontFamily="casual"
         android:shadowColor="@color/black"
         android:shadowDy="5"
@@ -45,7 +44,7 @@
         android:textColor="#00BF56"
         android:textSize="34sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toEndOf="@+id/textView15"
