--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,9 +4,11 @@
         <item>@font/abril_fatface</item>
         <item>@font/aldrich</item>
         <item>@font/alfa_slab_one</item>
+        <item>@font/anton</item>
         <item>@font/audiowide</item>
         <item>@font/cuprum</item>
         <item>@font/erica_one</item>
+        <item>@font/limelight</item>
         <item>@font/ubuntu_mono</item>
         <item>@font/ultra</item>
     </array>
