:)start with Bismillah!

--- a/app/src/main/res/layout-land/activity_launcher.xml
+++ b/app/src/main/res/layout-land/activity_launcher.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="false"
-        android:background="@drawable/_385516"
+        android:background="@drawable/appbglandscape"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="175dp">
