--- a/app/src/main/res/layout/activity_studentauthactivity.xml
+++ b/app/src/main/res/layout/activity_studentauthactivity.xml
@@ -4,40 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:translationX="-3dp"
+    android:background="@drawable/appbg"
     tools:context=".Studentauthactivity">
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.445" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiemail"
-        android:layout_width="376dp"
-        android:layout_height="55dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="398dp"
         android:layout_marginEnd="9dp"
-        android:layout_marginBottom="33dp"
         android:background="#00BF56"
         android:hint="Enter Email"
         app:boxBackgroundColor="@color/white"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
         app:hintAnimationEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/tipassword"
+        app:hintTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.56">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etemail"
@@ -48,21 +37,22 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tipassword"
-        android:layout_width="376dp"
-        android:layout_height="55dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="33dp"
         android:layout_marginEnd="9dp"
-        android:layout_marginBottom="244dp"
         android:background="#00BF56"
         android:hint="Enter Password"
         app:boxBackgroundColor="@color/white"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:hintTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/btnstudentlogin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiemail"
+        app:layout_constraintVertical_bias="0.166"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="#3E3C3C">
 
@@ -75,29 +65,24 @@
 
     <View
         android:id="@+id/divider"
-        android:layout_width="500dp"
-        android:layout_height="8dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="6dp"
+        android:layout_marginEnd="48dp"
         android:background="#EE2400"
         android:translationX="50dp"
         app:layout_constraintBottom_toTopOf="@+id/tiemail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/tiemail"
+        app:layout_constraintHorizontal_bias="0.887"
+        app:layout_constraintStart_toStartOf="@+id/tipassword"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.283" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="279dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="247dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="sans-serif-light"
+        android:layout_width="417dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="204dp"
+        android:fontFamily="@font/audiowide"
         android:shadowColor="@color/black"
         android:shadowDy="5"
         android:shadowRadius="6"
@@ -105,83 +90,38 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="260dp"
-        android:layout_height="220dp"
+        android:layout_width="244dp"
+        android:layout_height="191dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/activity_logo" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="25dp"
-        android:layout_height="44dp"
-        android:fontFamily="casual"
-        android:shadowColor="@color/black"
-        android:shadowDy="5"
-        android:shadowRadius="6"
-        android:text="A"
-        android:textColor="#00BF56"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.399"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.833" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="24dp"
-        android:layout_height="46dp"
-        android:fontFamily="casual"
-        android:shadowColor="@color/black"
-        android:shadowDy="5"
-        android:shadowRadius="6"
-        android:text="P"
-        android:textColor="#EE2400"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="24dp"
-        android:layout_height="46dp"
-        android:fontFamily="casual"
-        android:shadowColor="@color/black"
-        android:shadowDy="5"
-        android:shadowRadius="6"
-        android:text="P"
-        android:textColor="#00BF56"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.593"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnstudentlogin"
@@ -194,49 +134,148 @@
         app:cornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tipassword"
-        app:layout_constraintVertical_bias="0.43" />
+        app:layout_constraintTop_toTopOf="@+id/tiemail"
+        app:layout_constraintVertical_bias="0.91" />
 
     <TextView
         android:id="@+id/tvforgetpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="227dp"
-        android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif-black"
         android:text="Forgot Password"
         android:textColor="?android:attr/textColorLink"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnstudentlogin"
+        app:layout_constraintBottom_toBottomOf="@+id/btnstudentlogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.379"
+        app:layout_constraintStart_toStartOf="@+id/tipassword"
         app:layout_constraintTop_toBottomOf="@+id/tipassword"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.307" />
 
     <TextView
         android:id="@+id/tvnewregister"
-        android:layout_width="127dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="109dp"
+        android:layout_height="24dp"
         android:clickable="true"
         android:fontFamily="sans-serif-black"
         android:minHeight="48dp"
         android:text="New Register"
         android:textColor="?android:attr/textColorLink"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnstudentlogin"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/btnstudentlogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.522"
-        app:layout_constraintStart_toEndOf="@+id/tvforgetpassword"
+        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toStartOf="@+id/tvforgetpassword"
         app:layout_constraintTop_toBottomOf="@+id/tipassword"
+        app:layout_constraintVertical_bias="0.296" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="429dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="224dp"
+        android:fontFamily="@font/aldrich"
+        android:shadowColor="#000000"
+        android:shadowDy="5"
+        android:shadowRadius="6"
+        android:text="app"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="34sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="403dp"
+        android:layout_height="41dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.373" />
+
+    <Space
+        android:id="@+id/space2"
+        android:layout_width="394dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.441" />
+
+    <Space
+        android:layout_width="390dp"
+        android:layout_height="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.658" />
+
+    <Space
+        android:layout_width="390dp"
+        android:layout_height="42dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.795" />
+
+    <Space
+        android:id="@+id/space4"
+        android:layout_width="398dp"
+        android:layout_height="46dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.888" />
+
+    <Space
+        android:layout_width="391dp"
+        android:layout_height="27dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Space
+        android:id="@+id/space3"
+        android:layout_width="54dp"
+        android:layout_height="283dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Space
+        android:id="@+id/space5"
+        android:layout_width="56dp"
+        android:layout_height="283dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.005" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
